# coreutils

./: .cvsignore  .gitattributes  .gitignore  .gitmodules  .hgignore  .mailmap  .prev-version  .travis.yml  .vg-suppressions  .x-po-check  .x-sc_GPL_version  .x-sc_always_defined_macros  .x-sc_bindtextdomain  .x-sc_cast_of_argument_to_free  .x-sc_error_message_uppercase  .x-sc_file_system  .x-sc_obsolete_symbols  .x-sc_po_check  .x-sc_program_name  .x-sc_prohibit_always_true_header_tests  .x-sc_prohibit_atoi_atof  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_prohibit_fail_0  .x-sc_prohibit_magic_number_exit  .x-sc_prohibit_stat_st_blocks  .x-sc_prohibit_strcmp  .x-sc_prohibit_tab_based_indentation  .x-sc_require_config_h  .x-sc_require_config_h_first  .x-sc_space_tab  .x-sc_sun_os_names  .x-sc_system_h_headers  .x-sc_trailing_blank  .x-sc_unmarked_diagnostics  .x-sc_useless_cpp_parens  .x-update-copyright  ABOUT-NLS  AUTHORS  COPYING  ChangeLog  (+44 more)
doc/: .cvsignore  .gitignore  ChangeLog  ChangeLog-2007  Makefile.am  Makefile.in  code-vs-command  constants.texi  coreutils.texi  doclicense.texi  fdl.texi  getdate.texi  local.mk  mdate-sh  omni-utils.texi  perm.texi  sh-utils.texi  sort-version.texi  texinfo.tex  textutils.texi
lib/: .cppi-disable  .cvsignore  .gdb-history  .gitignore  ChangeLog  ChangeLog-2007  Makefile.am  Makefile.in  README  TODO  __fpending.c  __fpending.h  acl.c  acl.h  addext.c  alloca.c  alloca_.h  allocsa.c  allocsa.h  argmatch.c  argmatch.h  asnprintf.c  asprintf.c  at-func.c  atexit.c  backupfile.c  backupfile.h  base64.c  basename.c  bcopy.c  buffer-lcm.c  buffer-lcm.h  bumpalloc.h  c-stack.c  c-stack.h  c-strtod.c  c-strtod.h  calloc.c  canon-host.c  canon-host.h  (+375 more)
m4/: .cvsignore  .gitignore  ChangeLog  ChangeLog-2007  Makefile.am  Makefile.am.in  Makefile.in  README  absolute-header.m4  acl.m4  afs.m4  alloca.m4  allocsa.m4  argmatch.m4  assert.m4  atexit.m4  autobuild.m4  backupfile.m4  basename.m4  bison.m4  boottime.m4  c-bs-a.m4  c-stack.m4  c-strtod.m4  c.m4  calloc.m4  canon-host.m4  canonicalize.m4  ccstdc.m4  chdir-long.m4  chdir-safer.m4  chdir.m4  check-decl.m4  check-type.m4  chmod-safer.m4  chown.m4  clock_time.m4  cloexec.m4  close-stream.m4  closeout.m4  (+268 more)
man/: .cvsignore  .gitignore  Makefile.am  Makefile.in  b2sum.x  base32.x  base64.x  basename.x  basenc.x  cat.x  chgrp.x  chmod.x  chown.x  chroot.x  cksum.x  comm.x  cp.x  date.x  df.x  dir.x  dircolors.x  dirname.x  du.x  dummy-man  echo.x  env.x  expand.x  fold.x  help2man  help2man.diff  help2man.in  id.x  install.x  join.x  kill.x  link.x  ln.x  local.mk  logname.x  ls.x  (+39 more)
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  README-rm-timing-2  README-rm-timing-compare  ansi2knr.c  asa.c  base64.c  basename.c  basenc.c  c99-to-c89.diff  cat.c  chcon.c  checksum.h  chgrp.c  chmod.c  chown-chgrp.c  chown-chown.c  chown-core.c  chown-core.h  chown.c  chown.h  chroot.c  cksum.c  cksum.h  cksum_avx2.c  cksum_avx512.c  cksum_crc.c  cksum_crc.h  cksum_pclmul.c  cksum_vmull.c  comm.c  copy-file-data.c  copy.c  copy.h  coreutils-arch.c  coreutils-chgrp.c  coreutils-dir.c  coreutils-false.c  (+186 more)
src/blake2/: .gitignore  b2sum.c  b2sum.h  blake2-impl.h  blake2.h  blake2b-ref.c
src/logos/: readme.txt
tests/: .env-warn  Coreutils.pm  CuSkip.pm  CuTmpdir.pm  Fetish.pm  Makefile.am  Makefile.am.in  Makefile.in  README  acl  check.mk  d_type-check  envvar-check  expensive  filefrag-extent-compare  group-names  help-version  init.cfg  init.sh  input-tty  lang-default  local.mk  mk-script  mkdtemp  no-perl  other-fs-tmpdir  priv-check  require-perl  rwx-to-mode  sample-test  seek-data-capable  selinux  setgid-check  shell-or-perl  sparse-file  strace  test-lib.sh  umask-check  very-expensive
tests/basename/: Makefile.am  Makefile.in  basic
tests/basenc/: base64.pl  basenc-bounded-memory.sh  basenc.pl  bounded-memory.sh  large-input.sh
tests/cat/: cat-E.sh  cat-buf.sh  cat-distinct-err.sh  cat-proc.sh  cat-self.sh  splice.sh
tests/chcon/: chcon-fail.sh  chcon.sh  traversal-missing.sh
tests/chgrp/: Makefile.am  Makefile.in  basic  basic.sh  default-no-deref  default-no-deref.sh  deref  deref.sh  from.sh  no-x  no-x.sh  posix-H  posix-H.sh  recurse  recurse.sh
tests/chmod/: Makefile.am  Makefile.in  c-option  c-option.sh  equal-x  equal-x.sh  equals  equals.sh  ignore-symlink.sh  inaccessible  inaccessible.sh  no-x  no-x.sh  octal  octal.sh  only-op.sh  partial-fail.sh  setgid  setgid.sh  silent  silent.sh  symlinks.sh  thru-dangling  thru-dangling.sh  umask-x  umask-x.sh  usage  usage.sh
tests/chown/: Makefile.am  Makefile.in  basic  basic.sh  deref  deref.sh  preserve-root  preserve-root.sh  separator  separator.sh
tests/chroot/: chroot-credentials.sh  chroot-fail.sh  credentials
tests/cksum/: b2sum.sh  cksum-a.sh  cksum-base64-untagged.sh  cksum-base64.pl  cksum-c.sh  cksum-raw.sh  cksum-sha3.sh  cksum.sh  md5sum-bsd.sh  md5sum-newline.pl  md5sum-parallel.sh  md5sum.pl  sha1sum-vec.pl  sha1sum.pl  sha224sum.pl  sha256sum.pl  sha384sum.pl  sha512sum.pl  sm3sum.pl  sum-sysv.sh  sum.pl
tests/comm/: dash-dash.sh
tests/cp/: Makefile.am  Makefile.in  abuse  abuse.sh  acl  acl.sh  attr-existing.sh  backup-1  backup-1.sh  backup-dir  backup-dir.sh  backup-is-src  backup-is-src.sh  capability  capability.sh  copy-FMR.sh  cp-HL  cp-HL.sh  cp-a-selinux  cp-a-selinux.sh  cp-deref  cp-deref.sh  cp-i  cp-i.sh  cp-mv-backup  cp-mv-backup.sh  cp-mv-enotsup-xattr  cp-mv-enotsup-xattr.sh  cp-parents  cp-parents.sh  cross-dev-symlink.sh  debug.sh  deref-slink  deref-slink.sh  dir-rm-dest  dir-rm-dest.sh  dir-slash  dir-slash.sh  dir-vs-file  dir-vs-file.sh  (+95 more)
tests/csplit/: csplit-1000.sh  csplit-heap.sh  csplit-io-err-2.sh  csplit-io-err-3.sh  csplit-io-err.sh  csplit-suppress-matched.pl  csplit.sh
tests/cut/: .cvsignore  Makefile.am  Makefile.in  Test.pm  bounded-memory.sh  build-script.pl  cut-huge-range.sh  cut-tests  cut.pl  mb-non-utf8.sh  mk-script.pl
tests/date/: Makefile.am  Makefile.in  Test.pm  date-debug.sh  date-ethiopia.sh  date-iran.sh  date-locale-hour.sh  date-next-dow.pl  date.pl  (+7 more)
(+1842 files in other folders)
